--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
     <div class="intro__image animate__animated animate__slideInLeft">
-      <img src="images/VTH1.jpg" alt="Hình cá nhân" />
+      <img src="images/VTH1.JPG" alt="Hình cá nhân" />
     </div>
   </section>
 
