--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section id="about-me">
     <div class="about-me__image">
       <img
-        src="images/IMG.jpg"
+        src="images/IMG.JPG"
         alt="Hình cá nhân" />
     </div>
     <div class="about-me__content">
