--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 <body>
   <header id="header">
     <div class="header-container__left">
-      <img class="header-container__left--logo"
-        src="images/AVT.jpg"
-        alt="logo wellspring" />
+      <img class="header-container__left--logo" src="images/AVT.jpg" alt="logo wellspring" />
       <div class="header-container__left--name">Võ Thiên Hương/Jenny</div>
     </div>
     <div class="header-container__right">
@@ -79,9 +77,7 @@
 
   <section id="about-me">
     <div class="about-me__image">
-      <img
-        src="images/IMG.JPG"
-        alt="Hình cá nhân" />
+      <img src="images/IMG.JPG" alt="Hình cá nhân" />
     </div>
     <div class="about-me__content">
       <h2 class="about-me__content--title">
@@ -89,10 +85,10 @@
         <span class="about-me__content--title-text-2">me</span>
       </h2>
       <p class="about-me__content--description">
-        I grew up in a middle-class home within a nuclear family and am the eldest sister of two siblings. I 
-        have a deep love for mathematics, nature, and animals. I can spend hours looking at the sky or observing 
-        the landscape to find inspiration for my paintings, as well as solving mathematics problems. I truly 
-        enjoy working with children and have a passion for cute objects. I would like to pursue my dream of becoming 
+        I grew up in a middle-class home within a nuclear family and am the eldest sister of two siblings. I
+        have a deep love for mathematics, nature, and animals. I can spend hours looking at the sky or observing
+        the landscape to find inspiration for my paintings, as well as solving mathematics problems. I truly
+        enjoy working with children and have a passion for cute objects. I would like to pursue my dream of becoming
         a mathematician or a mathematics teacher in the academic environment of the U.S.
       </p>
       <div class="about-me__content--info">
@@ -123,7 +119,9 @@
           <img src="https://cdn-icons-png.flaticon.com/512/3670/3670124.png" width="32" alt="">
         </a>
         <a href="https://www.instagram.com/lazycatt_040207/" target="_blank">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" width="32" alt="">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
+            width="32" alt="">
         </a>
       </div>
     </div>
@@ -169,28 +167,28 @@
       </div>
       <h2 class="my-preferences__content--title">Reading, Painting, Crocheting, Badminton</h2>
       <p class="my-preferences__content--description">
-        Reading is a sanctuary for my mind, allowing me to escape into different worlds and perspectives. Each book 
-        opens a door to new ideas, enriching my understanding of life and humanity. The kinds of books that I like 
-        most are detective, science fiction, and novels. Books really fuel my curiosity, inspire my creativity, 
-        and help me relax and escape from the hustle and bustle of everyday life.  
+        Reading is a sanctuary for my mind, allowing me to escape into different worlds and perspectives. Each book
+        opens a door to new ideas, enriching my understanding of life and humanity. The kinds of books that I like
+        most are detective, science fiction, and novels. Books really fuel my curiosity, inspire my creativity,
+        and help me relax and escape from the hustle and bustle of everyday life.
       </p>
       <p class="my-preferences__content--description">
-        Painting, for me, is a vibrant expression of emotion and thought. With each brushstroke, I explore my inner 
-        landscape, translating feelings into colors and forms. This creative process not only relaxes me but also 
-        serves as a powerful medium for self-discovery and communication, connecting me to others through shared 
+        Painting, for me, is a vibrant expression of emotion and thought. With each brushstroke, I explore my inner
+        landscape, translating feelings into colors and forms. This creative process not only relaxes me but also
+        serves as a powerful medium for self-discovery and communication, connecting me to others through shared
         experiences and visual storytelling.
       </p>
       <p class="my-preferences__content--description">
-        Crocheting is a meditative practice that connects creativity with craftsmanship. As I weave yarn into 
-        intricate patterns, I find a sense of peace and accomplishment. Each project, whether small stuffed 
-        animals or a bag, reflects my patience and dedication, reminding me that art can be both functional and 
+        Crocheting is a meditative practice that connects creativity with craftsmanship. As I weave yarn into
+        intricate patterns, I find a sense of peace and accomplishment. Each project, whether small stuffed
+        animals or a bag, reflects my patience and dedication, reminding me that art can be both functional and
         beautiful.
       </p>
       <p class="my-preferences__content--description">
-        Playing badminton adds a dynamic rhythm to my life. Badminton is the greatest way to strengthen my bonds 
-        with my friends and family. This sport not only challenges my physical abilities but also sharpens my 
-        strategic thinking. The fast-paced nature of the game keeps me energized and focused. Through badminton, 
-        I cultivate resilience and adaptability, essential traits in both sport and life. 
+        Playing badminton adds a dynamic rhythm to my life. Badminton is the greatest way to strengthen my bonds
+        with my friends and family. This sport not only challenges my physical abilities but also sharpens my
+        strategic thinking. The fast-paced nature of the game keeps me energized and focused. Through badminton,
+        I cultivate resilience and adaptability, essential traits in both sport and life.
       </p>
     </div>
 
@@ -204,28 +202,34 @@
     <h2 class="creative-works--title">Painting Themes</h2>
 
     <div class="creative-works-card">
-      <a class="card" href="#" target="_blank">
-        <h2>Culture
-        </h2>
-        <div class="card__content">
-          <img src="images/culture.PNG" alt="">
-        </div>
-      </a>
-      <a class="card" href="#" target="_blank">
-        <h2>Nature
-        </h2>
-        <div class="card__content">
-          <img src="images/nature.PNG" alt="">
-        </div>
-      </a>
-      <a class="card" href="#" target="_blank">
-        <h2>Animals
-        </h2>
-        <div class="card__content">
-          <img src="images/animals.PNG" alt="">
-        </div>
-      </a>
+      <div class="creative-works-card-container">
+        <img class="creative-works-card-image" src="images/culture.PNG" alt="">
+        <div class="overlay">Culture</div>
+      </div>
+      <div class="creative-works-card-container">
+        <img class="creative-works-card-image" src="images/nature.PNG" alt="">
+        <div class="overlay">Nature</div>
+      </div>
+      <div class="creative-works-card-container">
+        <img class="creative-works-card-image" src="images/animals.PNG" alt="">
+        <div class="overlay">Animals</div>
+      </div>
+    </div>
+    <h2 class="creative-works--title">Painting Themes</h2>
 
+    <div class="creative-works-card">
+      <div class="creative-works-card-container">
+        <img class="creative-works-card-image" src="images/culture.PNG" alt="">
+        <div class="overlay">Culture</div>
+      </div>
+      <div class="creative-works-card-container">
+        <img class="creative-works-card-image" src="images/nature.PNG" alt="">
+        <div class="overlay">Nature</div>
+      </div>
+      <div class="creative-works-card-container">
+        <img class="creative-works-card-image" src="images/animals.PNG" alt="">
+        <div class="overlay">Animals</div>
+      </div>
     </div>
   </section>
 
@@ -250,7 +254,7 @@
       Copyright © 2024 All Rights Reserved. Made by Vo Thien Huong
     </div>
   </footer>
-  
+
   <section class="sticky">
     <div class="bubbles">
       <div class="bubble"></div>
@@ -263,7 +267,7 @@
       <div class="bubble"></div>
       <div class="bubble"></div>
       <div class="bubble"></div>
-      
+
     </div>
   </section>
   <!-- add font awesome icon library -->
