--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <div class="intro__content">
       <h2 class="intro__content-greeting">HELLO, I'M</h2>
       <h1 class="intro__content-title">Võ Thiên Hương</h1>
-      <h3 class="intro__content-greeting">(Jenny Võ)</h3>
+      <h3 class="intro__content-subgreeting">(Jenny Võ)</h3>
       <span class="intro__content-subtitle" id="text_Anim"></span>
 
-      <a class="container-button intro__content-button-play-chess" href="https://link.chess.com/play/56UZMf"
+      <a class="container-button intro__content-button-play-chess" href="https://skribbl.io/"
         target="_blank">
         <div class="hover bt-1"></div>
         <div class="hover bt-2"></div>
@@ -63,7 +63,7 @@
         <div class="hover bt-4"></div>
         <div class="hover bt-5"></div>
         <div class="hover bt-6"></div>
-        <button id="button-play-chess" onclick="playChess()"></button>
+        <button id="button-play-chess"></button>
       </a>
     </div>
 
@@ -196,42 +196,48 @@
 
   <!-- Creative Works -->
   <section id="creative-works">
-    <div class="creative-works--intro">
-      Creative Pieces
+    <!-- Intro Section -->
+    <div class="creative-works-intro">
+      <p>Creative Pieces</p>
     </div>
-    <h2 class="creative-works--title">Painting Themes</h2>
-
-    <div class="creative-works-card">
-      <div class="creative-works-card-container">
-        <img class="creative-works-card-image" src="images/culture.PNG" alt="">
-        <div class="overlay">Culture</div>
+  
+    <h2 class="creative-works-title">Painting Themes</h2>
+    <div class="creative-works-card-container">
+      <div class="creative-works-card">
+        <img class="creative-works-card-image" src="images/culture.PNG" alt="Culture">
+        <div class="creative-works-card-overlay">Culture</div>
       </div>
-      <div class="creative-works-card-container">
-        <img class="creative-works-card-image" src="images/nature.PNG" alt="">
-        <div class="overlay">Nature</div>
+      <div class="creative-works-card">
+        <img class="creative-works-card-image" src="images/nature.PNG" alt="Nature">
+        <div class="creative-works-card-overlay">Nature</div>
       </div>
-      <div class="creative-works-card-container">
-        <img class="creative-works-card-image" src="images/animals.PNG" alt="">
-        <div class="overlay">Animals</div>
+      <div class="creative-works-card">
+        <img class="creative-works-card-image" src="images/animals.PNG" alt="Animals">
+        <div class="creative-works-card-overlay">Animals</div>
       </div>
     </div>
-    <h2 class="creative-works--title">Painting Themes</h2>
-
-    <div class="creative-works-card">
-      <div class="creative-works-card-container">
-        <img class="creative-works-card-image" src="images/culture.PNG" alt="">
-        <div class="overlay">Culture</div>
+  
+    <h2 class="creative-works-title level2">Crocheting Products</h2>
+    <div class="creative-works-card-container">
+      <div class="creative-works-card">
+        <img class="creative-works-card-image" src="images/Crocheted Products 1.jpg" alt="Culture">
+        <div class="creative-works-card-overlay">A bunch of flowers</div>
       </div>
-      <div class="creative-works-card-container">
-        <img class="creative-works-card-image" src="images/nature.PNG" alt="">
-        <div class="overlay">Nature</div>
+      <div class="creative-works-card">
+        <img class="creative-works-card-image" src="images/Crocheted Products 2.jpg" alt="Nature">
+        <div class="creative-works-card-overlay">A watter bottle holder</div>
       </div>
-      <div class="creative-works-card-container">
-        <img class="creative-works-card-image" src="images/animals.PNG" alt="">
-        <div class="overlay">Animals</div>
+      <div class="creative-works-card">
+        <img class="creative-works-card-image" src="images/Crocheted Products 3.jpg" alt="Animals">
+        <div class="creative-works-card-overlay">A cute bunny</div>
+      </div>
+      <div class="creative-works-card">
+        <img class="creative-works-card-image" src="images/Crocheted Products 4.jpg" alt="Animals">
+        <div class="creative-works-card-overlay">A branch of bunny</div>
       </div>
     </div>
   </section>
+  
 
   <!-- Contact -->
   <section id="contact"></section>
